--- a/first.ipynb
+++ b/first.ipynb
@@ -599,13 +599,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "id": "5d67a0b2-a9e1-4773-8ef6-e1f7280f0be1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write a program that gets a number from the user and prints the square of it"
+    "# write a program that gets two numbers from the users and prints the sum of them"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ababf76c-5964-49f9-8609-c93d0498eb31",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
