--- a/first.ipynb
+++ b/first.ipynb
@@ -919,11 +919,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "081a32e3-60b5-4697-b60e-45cdbe875d3a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cal_tri(l, w):\n",
+    "    return l*w"
+   ]
   },
   {
    "cell_type": "markdown",
