--- a/first.ipynb
+++ b/first.ipynb
@@ -1362,15 +1362,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "id": "ceccf34f-4a73-4565-b68d-d01c2ca11c25",
    "metadata": {},
    "outputs": [],
    "source": [
     "def our_abs(n):\n",
-    "    # if the number is positive (n>0) return itself.\n",
+    "    # Check for being a number, if the type(n) is not a number it should not be float AND int, both conditions should be TRUE at the same time.\n",
     "    if type(n) != int and type(n) != float:\n",
     "        return \"this is not a valid number\"\n",
+    "    # if the number is positive (n>0) return itself.\n",
     "    if n>0:\n",
     "        return n\n",
     "    # if the number is negative (n<0), return -n.\n",
@@ -1380,6 +1381,119 @@
     "        return 0\n",
     "    else:\n",
     "        return \"This is not a valid number\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bedc2bc-7f9b-40e1-9f81-f5c02af5754c",
+   "metadata": {},
+   "source": [
+    "### AND, OR, NOT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6f15b41e-8dd7-44c0-b133-a1918c07ef3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2>1 and 3>1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "394bd967-228f-4529-a543-02dbeaa6d1ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2>1 and 2>3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "84594ec3-4be7-4dc0-bcaf-770f6388bcd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2>1 or 2>3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c34ceb2d-cf25-4936-8be9-6e93c236f2a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not 2>3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "32c4f0a0-8edf-436f-97c7-89fe9eaa400f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2>1 and not 2>3"
    ]
   },
   {
